main/default/objects/Rating_Matrix_Value__c/Rating_Matrix_Value__c.object-meta.xml
<CustomObject>
    <label>Rating Matrix Value</label>
    <nameField>
        <displayFormat>RMV-{0000}</displayFormat>
        <label>Rating Matrix Value</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Matrix Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>