main/default/objects/Rating_Matrix_Value__c/fields/Minimum_Premium__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Premium__c</fullName>
    <label>Minimum Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>