main/default/objects/Rating_Matrix_Value__c/fields/Rating_Range_Id2__c.field-meta.xml
<CustomField>
    <fullName>Rating_Range_Id2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating_Range_Id2</label>
    <referenceTo>Rating_Range_Value__c</referenceTo>
    <relationshipLabel>Rating Matrix Value (Rating_Range_Id2)</relationshipLabel>
    <relationshipName>Rating_Matrix_Range_Values</relationshipName>
    <type>Lookup</type>
</CustomField>