main/default/objects/Rating_Matrix_Value__c/fields/Rating_Specific_Id2__c.field-meta.xml
<CustomField>
    <fullName>Rating_Specific_Id2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating Specific Id2</label>
    <referenceTo>Rating_Specific_Value__c</referenceTo>
    <relationshipLabel>Rating Matrix Value (Rating Specific Id2)</relationshipLabel>
    <relationshipName>Rating_Matrix_Specific_Values</relationshipName>
    <type>Lookup</type>
</CustomField>