main/default/objects/Rating_Matrix_Value__c/fields/Rating_Specific_Id__c.field-meta.xml
<CustomField>
    <fullName>Rating_Specific_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating Specific Id</label>
    <referenceTo>Rating_Specific_Value__c</referenceTo>
    <relationshipLabel>Rating Matrix Value</relationshipLabel>
    <relationshipName>Rating_Matrix_Value</relationshipName>
    <type>Lookup</type>
</CustomField>