main/default/objects/Rating_Matrix_Value__c/fields/UW_Value__c.field-meta.xml
<CustomField>
    <fullName>UW_Value__c</fullName>
    <label>UW Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>